# small-logger

./: .gitignore  Cargo.toml  README.md
src/: api.rs  daemon.rs  data_format.rs  lib.rs  main.rs  runner.rs
viewer/: index.html
viewer/scripts/: app.js
viewer/styles/: main.css
