[package]

name = "small-logger"
description = "a small logger for programs who do not know how to log correctly"
version = "0.0.2"
license-file = "LICENSE"
repository = "https://github.com/octplane/small-logger"
authors = ["Pierre Baillet <pierre@baillet.name>"]

[dependencies]
rustc-serialize = "*"
time = "*"
iron = "*"
router = "*" # iron router
hyper = "*"
staticfile = "*"
openssl-sys="0.7.4"

[dependencies.mount]
git = "https://github.com/iron/mount.git"
