[package]

name = "small-logger"
description = "a small logger for programs who do not know how to log correctly"
version = "0.1.0"
license-file = "LICENSE"
repository = "https://github.com/octplane/small-logger"
authors = ["Pierre Baillet <pierre@baillet.name>"]

[dependencies]
rustc-serialize = "0.3.17"
time = "0.1.34"
iron = "0.2.6"
router = "0.1.0"
staticfile = "0.1.0."
getopts = "0.2"
mount = "0.0.10"

frank_jwt = "*"
urlencoded = "*"
